src/assets/css/main.scss
@charset "utf-8";

// 1. Your custom variables and variable overwrites.
$global-link-color: #DA7D02;

$global-font-family: "Merriweather Sans", "Noto Sans", sans-serif;
$base-heading-font-family: "Fira Code", monospace, monospace;
$base-code-font-family: "Fira Code", Consolas, monaco, monospace, monospace;
$logo-font-family: $base-heading-font-family;

$global-xxlarge-font-size: 2.125rem;

$container-max-width: 1100px;

// 2. Import default variables and available mixins.
@import "uikit/scss/variables-theme.scss";
@import "uikit/scss/mixins-theme.scss";

// 3. Your custom mixin overwrites.
// @mixin hook-card() { color: #000; }

@mixin hook-text-lead() {
    font-size: $global-font-size;

    @media (min-width: $breakpoint-medium) {
        font-size: $global-medium-font-size;
    }
    @media (min-width: $breakpoint-large) {
        font-size: $global-large-font-size;
    }
}

@mixin hook-height-misc() {

    // .uk-height-small\@s,
    // .uk-height-small\@m,
    // .uk-height-small\@l,
    // .uk-height-small\@xl,
    // .uk-height-medium\@s,
    // .uk-height-medium\@m,
    // .uk-height-medium\@l,
    // .uk-height-medium\@xl,
    // .uk-height-large\@s,
    // .uk-height-large\@m,
    // .uk-height-large\@l,
    // .uk-height-large\@xl {
    //     height:auto;
    // }
    
    @media (min-width: $breakpoint-small) {
        .uk-height-small\@s { height: $height-small-height; }
        .uk-height-medium\@s { height: $height-medium-height; }
        .uk-height-large\@s { height: $height-large-height; }
    }
    
    @media (min-width: $breakpoint-medium) {
        .uk-height-small\@m { height: $height-small-height; }
        .uk-height-medium\@m { height: $height-medium-height; }
        .uk-height-large\@m { height: $height-large-height; }
    }
    
    @media (min-width: $breakpoint-large) {
        .uk-height-small\@l { height: $height-small-height; }
        .uk-height-medium\@l { height: $height-medium-height; }
        .uk-height-large\@l { height: $height-large-height; }
    }
    
    @media (min-width: $breakpoint-xlarge) {
        .uk-height-small\@xl { height: $height-small-height; }
        .uk-height-medium\@xl { height: $height-medium-height; }
        .uk-height-large\@xl { height: $height-large-height; }
    }
} 

@mixin hook-base-blockquote() {
    padding-left: $padding-padding;
    border-left: 2px solid $global-muted-color;
}

@mixin hook-base-code {
    white-space: pre-wrap;
    word-wrap: break-word;
    overflow-wrap: break-word;
}

// 4. Import UIkit.
@import "uikit/scss/uikit-theme.scss";

@import './_code.scss';

@import url('https://fonts.googleapis.com/css?family=Merriweather+Sans:400,400i,700,700i|Fira+Code:400,500,700&display=swap');


pre {
    border: none;
    border-left: 4px solid $global-primary-background;
    background-color: $global-muted-background;
}

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    
    >main {
        flex-grow: 1;
    }
}

body {
    overflow-x: hidden;
}

.mjx-chtml.MJXc-display {
    overflow: scroll;
}

.y-leader {
    font-family: $logo-font-family;
}

.y-width-screen {
  width: 100vw;
  position: relative;
  left: 50%;
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
}

header, footer {
    font-family: $base-heading-font-family;
}

